7903880: Check if JCov needs an update for security manager removal
Reviewed-by: shurailine